@@ -1,5 +1,8 @@
 2010-03-17  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 
+	* include/dlvhex/MLPSolver.hpp: Fixing bug in smallest ILL.
+	* include/dlvhex/Logger.hpp: Likewise.
+
 	* testsuite/TestMLPSolver.cpp: Adding a test case for indirect rule to collect the bottom.
 	* examples/module-Indirection.hex: Likewise.
 
